tests/auto/gui/kernel/qguivariant/test/test.pro
@@ -4,3 +4,4 @@ TARGET = tst_qguivariant
 SOURCES  += tst_qguivariant.cpp
 INCLUDEPATH += $$PWD/../../../../other/qvariant_common
 QT += testlib
+RESOURCES += qguivariant.qrc
